--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -37,7 +37,7 @@
           %li.leftrailcontent
           - @enrolled_personas.each do |p|
             %a.explore_link{ style: "cursor: pointer; text-decoration: none;" }
-              = image_tag p.picture, class: "leftrailicon", title: "#{p.name}"
+              = image_tag p.picture, class: "leftrailicon", title: "#{p.name}", alt: "#{p.name}"
     %div.span11
       %div.newsfeed
         %div
