--- a/app/views/pages/profile.html.haml
+++ b/app/views/pages/profile.html.haml
@@ -1,106 +1,3 @@
-:javascript
-  $(function(){
-    $('.comment').click({ animation: 'slide', hover_x: '400px' });
-    $(".challengeselector li").click(function(){
-      $(".challengeselector li.selected").removeClass("selected");
-      $(this).addClass("selected");
-      
-      $(".challenge_details").hide();
-      $("#enrollment_"+$(this).attr("data-enrollment")).show();
-    });
-  });
-  
-:css
-  #profile .span69 { margin-left:20px; width:708px; }
-  #profile .span3 { margin-left:12px; }  
-  #profile .leftrailicon { height:58px; width:58px; margin-right:8px; }
-  #updatespace{ min-height:162px; }
-  #topboxcontent { width:737px; }
-  #topboxcontent h1{ font-size:45px; line-height:45px; }
-  #bottomboxcontent { margin-top: 97px; }
-  #profilemeat { padding:10px 0; border-radius: 5px; border-top-right-radius:0; border-top-left-radius:0; position: relative; background-clip: padding-box; color: #333; background-color: white; min-height:200px; }
-  .personabucket img { height:60px; width:60px; display:inline-block; }
-  .personalabel .headerinfo { letter-spacing:2px; display:inline-block; font-size:20px; padding-bottom: 4px; width: 89%; ;bottom: 20px;position: relative;}
-  .personalabel .headerinfo h3 {display:inline; margin-left:10px; }
-  .challengelabel .headerinfo { border:none;position:relative; bottom: 10px; margin-left:10px; letter-spacing:1px; }
-  .challengelabel .headerinfo h3 {line-height:30px; }
-  .personalabel .headerinfo h3 { position:relative; padding-right:10px; top:24px; left:0;}
-  .headerinfo {  display:inline-block;  }
-  .bigname { font-size:25px; }
-  .littledetails { font-size:20px; }
-  .challengecontent h2 { margin-bottom:10px; }
-  .challengebucket { margin: 20px auto 20px auto; width: 600px; padding: 12px;border: 1px solid rgba(0,0,0,.1);border-radius: 6px;background-color: #FCFCFC;}
-  .challengebucket img { height:60px; width:60px; display:inline-block; border-radius:6px; vertical-align: baseline; }
-  .challengebucket h4 { font-weight:bold; text-transform: uppercase; font-size: 14px;}
-  .arenabucket .profilecontent { }  
-  .bucketsubtitle { font-size:18px; padding:12px;}
-  .arenabucket .bucketsubtitle p { font-size: 15px; }
-  .bucketsubtitle p { font-weight:bold; }
-  .bucketsubtitle ul { margin:0 0 15px 50px; font-size:15px; }
-  .bucketsubtitle li { margin-bottom: 5px; }
-  .taskbox{ margin-left:40px; margin-bottom:25px; border: 1px solid rgba(0, 0, 0, .1); border-top-left-radius: 0;border-top-right-radius: 0;overflow-y: auto;background-color: transparent;background-image: -moz-linear-gradient(top,rgba(0, 0, 0, .06),transparent);background-image: -ms-linear-gradient(top,rgba(0, 0, 0, .06),transparent);background-image: -o-linear-gradient(top,rgba(0, 0, 0, .06),transparent);background-image: -webkit-gradient(linear, 0 0, 0 100%, from(rgba(0, 0, 0, .06)), to(transparent));background-image: -webkit-linear-gradient(top,rgba(0, 0, 0, 0.1),transparent);background-image: linear-gradient(top,rgba(0, 0, 0, .06),transparent);border-bottom-right-radius: 6px; border-bottom-left-radius:6px; padding:5px 12px 17px 12px; width: 89%;}
-  .taskbox h3{ text-shadow: 1px 0 0 #fff; }
-  .taskbox img { height:auto; width: auto; border-radius:0;  max-width: 100%; max-height: 300px; border-color: #ccc; border-style: solid; border-width: 0px; display: block; margin-left: auto; margin-right: auto; margin-top:10px; }
-  .taskbucket a { cursor: pointer; }
-  .taskboxheader { padding:0 20px; border: 1px solid rgba(0, 0, 0, .1);margin-left: 40px;border-top-left-radius: 6px;width: 87%;background-color: rgb(66, 66, 66);color: white;border-top-right-radius: 6px;border-bottom: transparent;}
-  .taskboxheader h3 { font-size:20px; }  
-  .personalabel { cursor:pointer; background-color:white; padding:12px 27px; border-bottom: 1px solid rgba(0,0,0,.1); border-top: 1px solid rgba(0,0,0,.1); background-image: -webkit-linear-gradient(top,white,rgb(243, 243, 243)); }
-  .personalabel:hover {border-color: rgba(82, 168, 236, 0.8);outline: 0;outline: thin dotted 9;-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);-moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);}  
-  .challengebucket .sub {font-size:14px;}
-  
-  .profileheader { background-image: -webkit-linear-gradient(top,white,rgb(243, 243, 243)); padding: 3px 10px 6px 10px; border: 1px solid rgba(0,0,0,.1);border-bottom: none;border-top-right-radius: 6px;border-top-left-radius: 6px;}
-  .profileheader img{ display:inline-block; width:40px; height:40px;  }
-  .profileheader h3 { display:inline-block; font-size: 20px; text-transform: uppercase;top: 3px;left: 4px; position: relative;}
-  .challengeselector { background-color: #f9f9f9; border: 1px solid rgba(0,0,0,.1);border-bottom-left-radius: 6px; border-bottom: none; border-right: none; }
-  .challengeselector img { width:27px; height:27px; border-radius:3px; display:inline-block; }
-  .challengeselector ul { list-style: none; margin:0;  }
-  .challengeselector li { font-size:16px; border-bottom:1px solid rgba(0,0,0,.1); padding: 8px 12px; cursor:pointer; color:gray; }
-  .challengeselector .selected { color: rgb(75, 75, 75);-webkit-box-shadow: inset 0 2px 12px rgba(0,0,0,.15);-moz-box-shadow: inset 0 2px 12px rgba(0,0,0,.15);box-shadow: inset 0 2px 12px rgba(0,0,0,.15);background-color: #eee;background-image: -webkit-linear-gradient(top,#eee,#e0e0e0);background-image: -moz-linear-gradient(top,#eee,#e0e0e0);background-image: -ms-linear-gradient(top,#eee,#e0e0e0);background-image: -o-linear-gradient(top,#eee,#e0e0e0);background-image: linear-gradient(top,#eee,#e0e0e0); }
-  .challengeselector .selected:hover { -webkit-box-shadow: inset 0 2px 12px rgba(0,0,0,.15);-moz-box-shadow: inset 0 2px 12px rgba(0,0,0,.15);box-shadow: inset 0 2px 12px rgba(0,0,0,.15);background-color: #eee;background-image: -webkit-linear-gradient(top,#eee,#e0e0e0);background-image: -moz-linear-gradient(top,#eee,#e0e0e0);background-image: -ms-linear-gradient(top,#eee,#e0e0e0);background-image: -o-linear-gradient(top,#eee,#e0e0e0);background-image: linear-gradient(top,#eee,#e0e0e0); }
-  .challengeselector li .pts { font-size:11px; float:right; position:relative; top:5px; }
-  .challengeselector li:last-child:hover { border-bottom-left-radius:6px; }
-  .challengeselector li:hover { background-image: -moz-linear-gradient(white, white 5%, #E6E6E6); background-image: -ms-linear-gradient(white, white 5%, #E6E6E6);  background-image: -o-linear-gradient(white, white 5%, #E6E6E6);  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(white), color-stop(0.05, white), to(#E6E6E6));  background-image: -webkit-linear-gradient(white, white 5%, #E6E6E6);  background-image: linear-gradient(white, white 5%, #E6E6E6);  color: rgb(75, 75, 75);  text-shadow: 0 1px 0px whitesmoke;  filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='white', EndColorStr='#E6E6E6');  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorStr='white', EndColorStr='#E6E6E6')";  -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.2);  -moz-box-shadow: 0 1px 1px rgba(0,0,0,0.2);    box-shadow: 0 1px 1px rgba(0,0,0,0.2);}
-  .challengeselector li:active { background-color: rgb(245, 245, 245);  background-image: none;  outline: 0;  -webkit-box-shadow: inset 0 2px 8px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.05);  -moz-box-shadow: inset 0 2px 8px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.05);  box-shadow: inset 0 2px 8px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.05);}
-  .challengeselector li div { position:relative; display:inline-block; top:4px;}
-  #profile .span11 { margin:0; }
-  #profile .span5 { width: 300px; }
-  #profile .span5 .leftbox { width:288px; margin-top:12px; }
-  .challengecontent { background-color: white; padding: 15px 20px; border: 1px solid rgba(0,0,0,.1);border-bottom-right-radius: 6px;border-bottom-left-radius: 6px; }
-  .challengecontent h2 img { position:relative; bottom:3px;  }
-  .progresssection { float: right; margin-top: 12px;}
-  .challengecontent h2 { color: rgb(111, 111, 111); font-size:33px; letter-spacing:1px;}
-  .arenabucket, .taskbucket, .crbucket { display: block;padding: 13px 28px;margin: 0 0 10px; background-color: #f5f5f5;border: 1px solid rgba(0, 0, 0, 0.15);-webkit-border-radius: 4px;-moz-border-radius: 4px; border-radius: 4px;}
-  #profile hr { margin:25px 0; }
-  .profileheader .progress {width: 200px;display: inline-block;margin: 13px 10px 0 10px; float: right;}
-  .profileprog {background-color: rgb(228, 228, 228); background-image: -moz-linear-gradient(top, rgb(228, 228, 228), rgb(240, 240, 240));background-image: -webkit-gradient(linear, 0 0, 0 100%, from(rgb(228, 228, 228)), to(rgb(240, 240, 240)));background-image: -webkit-linear-gradient(top, rgb(228, 228, 228), rgb(240, 240, 240));background-image: -o-linear-gradient(top, rgb(228, 228, 228), rgb(240, 240, 240));background-image: linear-gradient(to bottom, rgb(228, 228, 228), rgb(240, 240, 240));}
-  .profileheader h5 { display: inline-table; float: right; margin-top:14px; font-size:18px; }
-  .profilecontent { padding-bottom:8px;}
-  .profilecontent .table { margin-bottom: 0; border: 1px solid rgba(0,0,0,.1); width:auto; box-shadow: 0 2px 4px rgba(0, 0, 0, .05); background-color:white;display: inline-block;float: right; }
-  .profilecontent .table td { text-align:center; border-left: 1px solid rgba(0,0,0,.1); font-size:14px; width:87px; border-top:none; }
-  .profilecontent .table p { color: gray; margin:5px 0 0 0;}
-  .profilecontent .table h3 { font-size: 45px; }
-  .arenabucket { padding: 13px 12px 27px 28px;}
-  .myrank { display:inline-block; text-align: center;position: relative; top: 23px;}
-  .myrank span { font-size:79px; }
-  .myrank p { margin-bottom:5px; margin-top:6px; font-weight:bold; font-size:15px; }
-  .usercard { padding-top: 6px;border: 1px solid rgba(0,0,0,.1);border-radius: 6px;background-color: whitesmoke;display: inline-block;color: gray;font-size: 12px;min-width: 597px;padding: 2px 10px 10px;}
-  .usercard ul { }
-  .shareprofile { float:right;border: 1px solid rgba(0,0,0,.1);padding: 5px 8px;background-color: #f9f9f9;border-radius: 5px; }
-  .shareprofile p { font-weight:bold; font-size:14px; }
-  #profile .span9 { width: 735px; position: relative; margin:0; bottom:5px; }
-  .vitalinfo {  position: absolute; bottom: 6px; width:69%; }
-  .vitalinfo div { display:inline-block; }
-  .vitalinfo span { font-weight:bold;}
-  #profile hr { border-top: 1px solid rgb(226, 226, 226); border-bottom: 1px solid rgb(248, 248, 248); }
-  .similarpeople img { width:58px; height:58px; border-radius:4px; margin: 10px 8px 0 0; }
-  .similarpeople .leftrailcontent { margin-top:0; }
-  #profile .leftboxfooter { background-color:white; padding-right:0; padding-top:0; }
-  #profile .post {width: 500px;margin-right: auto;margin-left: auto;}
-  #profile .post:hover { background-color: transparent; }
-  #profile .postspace { width:474px; }
-  #profile .postspace img { height:20px; width:20px; }
-  #profile .postphotospace img { height:50px; width:50px; }
-   
 %div#profile
   %div#topsection
     %div#updatespace
@@ -112,8 +9,9 @@
               = link_to "Edit Profile", edit_user_path(@user.username), class: "button button-actionable"
           %div.span7{style: "min-height: 65px; vertical-align: top; margin: 0; width: 600px;"}
             %h1= @user.name
-            %p{ style: "font-family:'MuliItalic'; font-size:23px; margin: 5px 0 0px 0; "}= %Q("#{@user.description}")
-            %p{ style: "font-size: 18px; margin: 5px 0 0px 0; color: rgb(80, 80, 80);"}= truncate(@user_personas.collect{|up| up.persona.name }.join(" | "), length: 70)
+            - if @user.description
+              %p{ style: "font-family:'MuliItalic'; font-size:23px; margin: 10px 0 10px 0;"} "#{@user.description}"
+            %p{ style: "font-size: 18px; margin: 10px 0 5px 0; color: rgb(80, 80, 80);"}= truncate(@user_personas.collect{|up| up.persona.name }.join(" | "), length: 70)
         %div#bottomboxcontent
           %div.span9
             %div.vitalinfo
@@ -197,30 +95,8 @@
                       .votingandpointsarea
                         %span.vote_points{:style => "font-weight: bold;color: #404040;font-size: 16px;position: relative; top:3px;"}= task.points_awarded
                         %span{:style => "font-weight: bold;color: #404040;font-size: 16px;position: relative; top:3px; margin-right:5px;"} pts
-                        .dropdown.submission-icon{:style => "padding-top:0px; margin: 0px;"}
-                          %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#", :style => "padding:0px;"}
-                            %span.caret{:style => "margin: 6px 0 0 0;"}
-                          %ul.dropdown-menu{:role => "button", :style => "margin: 0; padding: 0; top:26px; left: -71px; min-width: 140px;"}
-                            %li{:style => "margin-left: -10px;"}
-                              .graynub{:style => "top:-17px; left: 75px; margin:0; "}
-                              %div{:style => "padding: 3px 0px; margin:0;"}
-                                %ul.profile_dropdown{:style => "list-style: none; margin: 0px; padding: 0; min-width: 120px;"}
-                                  %li
-                                    %a.retract_link{"data-confirm" => "Are you sure you want to delete your submission?", "data-remote" => "true", :href => "/retract/8086", :style => "padding: 0; color: inherit; text-shadow: none; padding-left: 8px; margin-left: -8px; margin-bottom: 2px;"} Delete Submission
                     .posttext.leveltext.dropdown
                       %pre.dropdown-toggle{"data-toggle" => "dropdown", :href => "#", :role => "button", :style => "color:inherit; cursor:default;"} Why do you think testing your software may be important?
-                      %ul.dropdown-menu{:role => "menu", :style => "left:99.5%; top:-70%; min-width:152px;"}
-                        %li
-                          %div
-                            .sidenub
-                          %div{:style => "padding: 3px 0px;"}
-                            %ul.profile_dropdown{:style => "list-style: none; margin: 0 2px 0 4px;"}
-                              %li.CR_dropdown_option{:style => "display:none;"}
-                                %a{:href => "/sections/97/take/494"} Answer this question
-                              %li.CR_dropdown_option
-                                %a{:href => "/tasks/494/view"} View all responses
-                              %li.CR_dropdown_option
-                                %a{:href => "/submissions/683/view"} View all comments
                     #cr_pop.CRarea
                       - if task.task.text?
                         %pre.unstyled{ style: "margin:20px; word-break:normal;" }= task.submitted_answer.content
@@ -230,8 +106,7 @@
                         %center
                           %div.youtube_answer{ id: "youtube_answer_#{task.id}", alt: task.submitted_answer.url }
                     = render "comments/comments", social_details(task)                        
-              %center
-                %a See more
+
           %hr
           %div.taskbucket
             - tasks = enrollment.tasks
@@ -250,30 +125,8 @@
                       .votingandpointsarea
                         %span.vote_points{:style => "font-weight: bold;color: #404040;font-size: 16px;position: relative; top:3px;"}= task.points_awarded
                         %span{:style => "font-weight: bold;color: #404040;font-size: 16px;position: relative; top:3px; margin-right:5px;"} pts
-                        .dropdown.submission-icon{:style => "padding-top:0px; margin: 0px;"}
-                          %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#", :style => "padding:0px;"}
-                            %span.caret{:style => "margin: 6px 0 0 0;"}
-                          %ul.dropdown-menu{:role => "button", :style => "margin: 0; padding: 0; top:26px; left: -71px; min-width: 140px;"}
-                            %li{:style => "margin-left: -10px;"}
-                              .graynub{:style => "top:-17px; left: 75px; margin:0; "}
-                              %div{:style => "padding: 3px 0px; margin:0;"}
-                                %ul.profile_dropdown{:style => "list-style: none; margin: 0px; padding: 0; min-width: 120px;"}
-                                  %li
-                                    %a.retract_link{"data-confirm" => "Are you sure you want to delete your submission?", "data-remote" => "true", :href => "/retract/8086", :style => "padding: 0; color: inherit; text-shadow: none; padding-left: 8px; margin-left: -8px; margin-bottom: 2px;"} Delete Submission
                     .posttext.leveltext.dropdown
                       %pre.dropdown-toggle{"data-toggle" => "dropdown", :href => "#", :role => "button", :style => "color:inherit; cursor:default;"} Why do you think testing your software may be important?
-                      %ul.dropdown-menu{:role => "menu", :style => "left:99.5%; top:-70%; min-width:152px;"}
-                        %li
-                          %div
-                            .sidenub
-                          %div{:style => "padding: 3px 0px;"}
-                            %ul.profile_dropdown{:style => "list-style: none; margin: 0 2px 0 4px;"}
-                              %li.CR_dropdown_option{:style => "display:none;"}
-                                %a{:href => "/sections/97/take/494"} Answer this question
-                              %li.CR_dropdown_option
-                                %a{:href => "/tasks/494/view"} View all responses
-                              %li.CR_dropdown_option
-                                %a{:href => "/submissions/683/view"} View all comments
                     #cr_pop.CRarea
                       %div{ style: "position: relative; font-size: 12px; min-height: 250px; max-height: 300px; overflow-x: hidden; overflow-y: hidden;" }
                         %div.content{ style: "position: absolute; top: 0; left: 0; min-width: 100%; min-height: 100%; z-index: 1; font-size: 20px;"}
@@ -285,6 +138,16 @@
                             %h5.description= task.submitted_answer.caption
                           - if not task.submitted_answer.description.blank?
                             %h5.description= task.submitted_answer.description
-                    = render "comments/comments", social_details(task)                        
-              %center
-                %a See more
+                    = render "comments/comments", social_details(task)
+
+:javascript
+  $(function(){
+    $('.comment').click({ animation: 'slide', hover_x: '400px' });
+    $(".challengeselector li").click(function(){
+      $(".challengeselector li.selected").removeClass("selected");
+      $(this).addClass("selected");
+      
+      $(".challenge_details").hide();
+      $("#enrollment_"+$(this).attr("data-enrollment")).show();
+    });
+  });
