--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -37,7 +37,7 @@
 
 .profileheader { background-image: -webkit-linear-gradient(top,white,rgb(243, 243, 243)); padding: 3px 10px 6px 10px; border: 1px solid rgba(0,0,0,.1);border-bottom: none;border-top-right-radius: 6px;border-top-left-radius: 6px;}
 .profileheader img{ display:inline-block; width:40px; height:40px;  }
-.profileheader h3 { display:inline-block; font-size: 20px; text-transform: uppercase;top: 3px;left: 4px; position: relative;}
+.profileheader h3 { display:inline-block; font-size: 20px; text-transform: uppercase; }
 .challengeselector { background-color: #f9f9f9; border: 1px solid rgba(0,0,0,.1);border-bottom-left-radius: 6px; border-bottom: none; border-right: none; }
 .challengeselector img { width:27px; height:27px; border-radius:3px; display:inline-block; }
 .challengeselector ul { list-style: none; margin:0;  }
