--- a/app/views/sections/_launchpad.html.haml
+++ b/app/views/sections/_launchpad.html.haml
@@ -67,7 +67,7 @@
                 %img{src:"https://s3.amazonaws.com/moonlite-nsdub/static/stoney_50x66.png", style:"height:45px;", alt: "Stoney"}
                 %span{style:"position:relative; top:7px; font-size:30px;"} Nice work!
                 %h4{style:"margin-top:12px; font-size:16px;"} Your question is now visible to the MetaBright community!
-                %h4{style:"margin-top:12px; font-size:16px; margin-bottom:12px;"} Remember, you earn #{Task::CREATOR_AWARD_POINTS.to_s} points every time you publish a question, but if your question is reported and taken down, you'll lose #{Task::CREATOR_PENALTY_POINTS} points.
+                %h4{style:"margin-top:12px; font-size:16px; margin-bottom:12px;"} You earn #{Task::CREATOR_AWARD_POINTS.to_s} points every time you publish a question!
                 %a.restart.button.button-actionable{ href: "#", style:"float:right; margin-bottom:10px; text-shadow:none;"} Create another question
                 %a.finish.button.button-standard{ href: "#", style:"float:left; margin-bottom:10px; text-shadow:none; color:#333;"} Finish
         %div.task_view
@@ -151,7 +151,7 @@
                 %img{src:"https://s3.amazonaws.com/moonlite-nsdub/static/stoney_50x66.png", style:"height:45px;", alt: "Stoney"}
                 %span{style:"position:relative; top:7px; font-size:30px;"} Nice work!
                 %h4{style:"margin-top:12px; font-size:16px;"} Your CR is now visible to the MetaBright community!
-                %h4{style:"margin-top:12px; font-size:16px;"} Remember, you earn #{Task::CREATOR_AWARD_POINTS.to_s} points every time you publish a CR, but if your question is reported and taken down, you'll lose #{Task::CREATOR_PENALTY_POINTS} points.
+                %h4{style:"margin-top:12px; font-size:16px;"} You earn #{Task::CREATOR_AWARD_POINTS.to_s} points every time you publish a CR!
                 %h4{style:"margin-top:12px; font-size:16px; margin-bottom:12px;"} If you'd like, you can <a class="take">post a response</a> to your CR now. 
                 %a.restart.button.button-actionable{ href: "#", style:"float:right; margin-bottom:10px; text-shadow:none;"} Create another question
                 %a.finish.button.button-standard{ href: "#", style:"float:left; margin-bottom:10px; text-shadow:none; color:#333;"} Finish
@@ -224,7 +224,7 @@
                 %img{src:"https://s3.amazonaws.com/moonlite-nsdub/static/stoney_50x66.png", style:"height:45px;", alt: "Stoney"}
                 %span{style:"position:relative; top:7px; font-size:30px;"} Nice work!
                 %h4{style:"margin-top:12px; font-size:16px;"} Your Task is now visible to the MetaBright community!
-                %h4{style:"margin-top:12px; font-size:16px;"} Remember, you earn #{Task::CREATOR_AWARD_POINTS.to_s} points every time you publish a Task, but if it's reported and taken down, you'll lose #{Task::CREATOR_PENALTY_POINTS} points.
+                %h4{style:"margin-top:12px; font-size:16px;"} You earn #{Task::CREATOR_AWARD_POINTS.to_s} points every time you publish a Task!
                 %h4{style:"margin-top:12px; font-size:16px; margin-bottom:12px;"} If you've already personally completed this Task, you can <a class="take">mark it as complete</a> now. 
                 %a.restart.button.button-actionable{ href: "#", style:"float:right; margin-bottom:10px; text-shadow:none;"} Create another Task
                 %a.finish.button.button-standard{ href: "#", style:"float:left; margin-bottom:10px; text-shadow:none; color:#333;"} Finish
