--- a/app/views/sections/take.html.haml
+++ b/app/views/sections/take.html.haml
@@ -19,12 +19,13 @@
           - if @task.creative_response?
             %span.cr_question_header Creative response:
           - elsif @task.task?
-            %span.cr_question_header Your Task, should you choose to accept it:
+            %span.cr_question_header{ style: "margin-left:10px; "} Your Task, should you choose to accept it:
           %p
-            %pre.CRquestion= @task.question
+            %pre.CRquestion{ style: "margin-left:25px; "}= @task.question
           - if @task.task?
-            %hr{ style: "margin: 20px 10px;" }
-            %p{ style: "vertical-align: bottom;" } To prove you completed this Task, you must provide a link to a website or upload an image that displays some sort of proof that you accomplished this Task.
+            %hr{ style: "margin: 15px 10px;" }
+            %img{ alt: "Lightbulb", src: LIGHT_BULB_URL, style: "height:20px; display:inline;" }
+            %p{ style: "vertical-align: top; display:inline-block; width:93%;" } To prove you completed this Task, you must provide a link to a website or upload an image that displays some sort of proof that you accomplished the Task.
         
         %div.CRresponsespace{ style: "min-height: 175px;" }           
           %h4{ style: "margin-bottom: 5px;" } Your answer:
