--- a/app/views/shared/_newsfeed.html.haml
+++ b/app/views/shared/_newsfeed.html.haml
@@ -79,14 +79,12 @@
             %div.details{ style: "padding: 5px 2px; height: 50px; width: 100%; position: absolute; bottom: 0px; left: 0px; z-index: 1000; background-color: rgb(29, 29, 29);"}
               %h4.title{ }= ct.submitted_answer.title.blank? ? "#{ct.user.name} marked this task complete on #{ct.submitted_answer.created_at.strftime('%B %d, %Y')}." : ct.submitted_answer.title
               - if not ct.submitted_answer.caption.blank?
-                %h5.description{ style: "display:none;"}= ct.submitted_answer.caption
+                %h5.description{ style: "display:none;"}
               - if not ct.submitted_answer.description.blank?
-                %h5.description= ct.submitted_answer.description
-            
+                %h5.description= ct.submitted_answer.description            
         - if not ct.task.task? and ct.submitted_answer.caption
           %div.caption{ style: "margin: 10px 5px; font-size: 13px; color: #999" }= ct.submitted_answer.caption
-      /* The div below is where the caption should go */      
-      %div{ style: "margin-top:12px; font-family: 'MuliItalic';"} "This is a caption to the above response" 
+      %div{ style: "margin-top:12px; font-family: 'MuliItalic';"}= %Q("#{ct.submitted_answer.caption}")
       %hr{style: "margin:5px 0 0 0;"}  
       = render "comments/comments", social_details(ct)
         
